# homebase-core

./: .gitmodules  Cargo.toml  README.md
authenticate/: Cargo.toml
authenticate/broker/: Cargo.toml
authenticate/broker/src/: lib.rs
authenticate/core/: Cargo.toml
authenticate/core/src/: lib.rs
authenticate/methods/: Cargo.toml
authenticate/methods/guest/: Cargo.toml
authenticate/methods/guest/src/: main.rs
authenticate/res/: passwords.json
authenticate/src/: lib.rs  main.rs
core/: Cargo.toml
core/src/: lib.rs
core/tests/: test.rs
fhe/: Cargo.toml
fhe/core/: Cargo.toml
fhe/core/src/: lib.rs
fhe/methods/: Cargo.toml
fhe/methods/guest/src/: main.rs
fhe/src/: lib.rs
host/: Cargo.toml
host/src/: main.rs
math/: intt.py
medical/: Cargo.toml
medical/core/: Cargo.toml
medical/core/src/: lib.rs
medical/methods/: Cargo.toml
medical/methods/guest/: Cargo.toml
medical/methods/guest/src/: main.rs
medical/src/: lib.rs  main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
models/: Cargo.toml
models/fhir/src/: lib.rs
models/src/: lib.rs
models/src/model/: Claim.rs
res/: claim.json  contract.json  coverage.json  network.json  plan.json
res/patient_resources/: patient_coverage.json  patient_practitioner.json  patient_trusted_orgs.json
res/provider_resources/: claim.json  coverage_eligibility_request.json
server/: Cargo.toml
server/src/: main.rs  server.rs
