[package]
name = "authenticate"
version = "0.1.0"
edition = "2021" 

[dependencies]
actix-web = "4.0.0-beta.8"
actix-rt = "2.2.0"
json = "0.12"
authenticate-methods = { path = "methods" }
authenticate-core = { path = "core" }
risc0-zkvm = { version = "0.14.0" }
serde = "1.0"
serde_json = "1.0"

[dependencies.tokio]
version = "1"
features = ["full"]



