[package]
name = "medical"
version = "0.1.0"
edition = "2021" 

[dependencies]
actix-web = "4.0.0-beta.8"
actix-rt = "2.2.0"
actix-cors = "0.6"
json = "0.12"
risc0-zkvm = { version = "0.14.0" }
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
medical-methods = { path = "methods" }
medical-core = { path = "core" }
Cupcake = { git = "ssh://git@github.com/emilianobonassi/Cupcake.git", ver = "0cfb82de7c0d8241afe65f9ca88cf51f1630e17f"}

[dependencies.tokio]
version = "1"
features = ["full"]



